--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       data-tag="font"
     />
+    <!--This is the head section-->
+    <style>
+      input:focus, textarea:focus, select:focus{
+              outline: none;
+          }
+    </style>
     <style>
       [data-thq="thq-dropdown"]:hover > [data-thq="thq-dropdown-list"] {
           display: flex;
